Update Publish file

--- a/DooProject/appsettings.json
+++ b/DooProject/appsettings.json
@@ -11,8 +11,8 @@
     //"Default": "Data Source=127.0.0.1;Initial Catalog=DooProject;Persist Security Info=True;User ID=sa;Password=new25432000;TrustServerCertificate=True;"
     //"Default": "Data Source=DooProject.db;"
     //"Default": "Data Source=d:\\SQLiteDatabaseBrowserPortable/DooProject.db"
-    "Default": "Data Source=c:\\inetpub\\wwwroot\\DooProject.db;"
-    //"Default": "Data Source=c:\\DooProject.db"
+    //"Default": "Data Source=c:\\inetpub\\wwwroot\\DooProject.db;"
+    "Default": "Data Source=d:\\DooProject.db"
   },
 
   "SecretKey": "DooProject_SecretKey_By_DevAsNew"
