--- a/DoProject - TestAPI/appsettings.json
+++ b/DoProject - TestAPI/appsettings.json
@@ -12,7 +12,7 @@
     //"Default": "Data Source=DooProject.db;"
     //"Default": "Data Source=d:\\SQLiteDatabaseBrowserPortable/DooProject.db"
     //"Default": "Data Source=c:\\inetpub\\wwwroot\\DooProject.db;"
-    "Default": "Data Source=d:\\DooProject.db"
+    "Default": "Data Source=c:\\Users\\Lenovo\\Desktop\\DooProject.db"
   },
 
   "SecretKey": "DooProject_SecretKey_By_DevAsNew"
