Update Serilog and fix product create bug

--- a/DooProject/appsettings.json
+++ b/DooProject/appsettings.json
@@ -1,18 +1,42 @@
 {
-  "Logging": {
-    "LogLevel": {
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft.AspNetCore": "Warning"
+  //  }
+  //},
+
+  // Serilog
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\ASP.Net Core\\DooProject\\LoggerFile.txt",
+          "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+        }
+      }
+    ]
   },
+
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
     //"Default": "Data Source=127.0.0.1;Initial Catalog=DooProject;Persist Security Info=True;User ID=sa;Password=new25432000;TrustServerCertificate=True;"
-    //"Default": "Data Source=DooProject.db;"
+    "Default": "Data Source=DooProject.db;"
     //"Default": "Data Source=d:\\SQLiteDatabaseBrowserPortable/DooProject.db"
     //"Default": "Data Source=c:\\inetpub\\wwwroot\\DooProject.db;"
-    "Default": "Data Source=c:\\Users\\Lenovo\\Desktop\\DooProject.db"
+    //"Default": "Data Source=c:\\Users\\Lenovo\\Desktop\\DooProject.db"
   },
 
   "SecretKey": "DooProject_SecretKey_By_DevAsNew"
