Create Product Services :rocket:
Update microservice architecture design

--- a/DooProject/appsettings.json
+++ b/DooProject/appsettings.json
@@ -1,33 +1,33 @@
 {
-  //"Logging": {
-  //  "LogLevel": {
-  //    "Default": "Information",
-  //    "Microsoft.AspNetCore": "Warning"
-  //  }
-  //},
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
 
   // Serilog
-  "Serilog": {
-    "Using": [],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
-    "WriteTo": [
-      { "Name": "Console" },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "D:\\ASP.Net Core\\DooProject\\LoggerFile.txt",
-          "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
-        }
-      }
-    ]
-  },
+  //"Serilog": {
+  //  "Using": [],
+  //  "MinimumLevel": {
+  //    "Default": "Information",
+  //    "Override": {
+  //      "Microsoft": "Warning",
+  //      "System": "Warning"
+  //    }
+  //  },
+  //  "Enrich": [ "FromLogContext", "WithMachineName", "WithProcessId", "WithThreadId" ],
+  //  "WriteTo": [
+  //    { "Name": "Console" },
+  //    {
+  //      "Name": "File",
+  //      "Args": {
+  //        "path": "D:\\ASP.Net Core\\DooProject\\LoggerFile.txt",
+  //        "outputTemplate": "{Timestamp} {Message}{NewLine:1}{Exception:1}"
+  //      }
+  //    }
+  //  ]
+  //},
 
   "AllowedHosts": "*",
 
