Update ReadMe and logger file path

--- a/DooProject/appsettings.json
+++ b/DooProject/appsettings.json
@@ -7,6 +7,7 @@
   },
 
   // Serilog
+
   //"Serilog": {
   //  "Using": [],
   //  "MinimumLevel": {
@@ -28,6 +29,9 @@
   //    }
   //  ]
   //},
+
+  // for dirty logger file path config
+  //"Path": "D:\\ASP.Net Core\\DooProject\\LoggerFile.txt",
 
   "AllowedHosts": "*",
 
