--- a/DooProject/appsettings.json
+++ b/DooProject/appsettings.json
@@ -37,7 +37,8 @@
 
   "ConnectionStrings": {
     //"Default": "Data Source=127.0.0.1;Initial Catalog=DooProject;Persist Security Info=True;User ID=sa;Password=new25432000;TrustServerCertificate=True;"
-    "Default": "Data Source=DooProject.db;"
+    //"Default": "Data Source=DooProject.db;"
+    "Default": "Data Source=D:\\ASP.Net Core\\DooProject\\DooProject\\SQLite\\DooProject.db;"
     //"Default": "Data Source=d:\\SQLiteDatabaseBrowserPortable/DooProject.db"
     //"Default": "Data Source=c:\\inetpub\\wwwroot\\DooProject.db;"
     //"Default": "Data Source=c:\\Users\\Lenovo\\Desktop\\DooProject.db"
